@@ -7,6 +7,8 @@
 	* registry/Makefile: Add a target to normalize whitespace in the
 	registry.sgml file.
 
+	* webgen/layout.html.in: Add links to the latest/ and obsolete/ dirs.
+
 2007-07-02  Benno Schulenberg  <benno@vertaalt.nl>
 
 	* lib/registry.py: Make 2.5g a lower version than 2.5.1 (for grep).
